tests/typing/fail/block_arg_fail.rb

def f()
  yield(2)
end

f() {|x| x.foo }
